# NovaOS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  render.yaml
.github/: LABELS.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rfc_proposal.md
apps/: README.md
apps/hello/: Cargo.toml
apps/hello-gui/: Cargo.toml
apps/hello-gui/src/: main.rs
apps/hello/src/: main.rs
apps/nova-files/: Cargo.toml
apps/nova-files/src/: main.rs
deploy/: README.md  bootlocal.sh  build-gameboy.sh  build-gba.sh  build-minetest.sh  build-tinycore.sh  chroot-start.sh  entrypoint.sh  index.html  install.ps1  install.sh  wbar.conf  xorg.conf
desktop/: README.md
desktop/compositor/: Cargo.toml
desktop/compositor/src/: main.rs  udev.rs
desktop/shell/: Cargo.toml
desktop/shell/src/: main.rs
docs/: 00-VISION.md  01-SYSTEM-ARCHITECTURE.md  02-REPOSITORY-STRUCTURE.md  03-DESKTOP-ARCHITECTURE.md  04-APPLICATION-FRAMEWORK-AND-SDK.md  05-PACKAGE-AND-UPDATE-SYSTEM.md  06-DESIGN-SYSTEM.md  07-BROWSER-DEPLOYMENT.md  08-SECURITY-MODEL.md  09-PERFORMANCE-STRATEGY.md  10-TESTING-AND-BUILD.md  11-CODING-STANDARDS.md  12-ROADMAP-AND-MILESTONES.md  13-RISK-ASSESSMENT.md  14-FUTURE-VISION.md  ENGINEERING-PRINCIPLES.md
docs/IMPLEMENTATION-NOTES/: 0001-nova-bus-dev-transport-tcp.md  0002-nova-bus-identity-self-reported.md  0003-nova-bus-register-handler-wire-message.md  0004-nova-bus-response-authorization.md  0005-nova-bus-measured-performance.md  0006-process-memory-windows-vs-linux.md  README.md
docs/decisions/: ADR-0001-linux-base-distribution.md  ADR-0002-init-and-service-supervision.md  ADR-0003-compositor-and-display-protocol.md  ADR-0004-systems-language.md  ADR-0005-ui-toolkit.md  ADR-0006-ipc-mechanism.md  ADR-0007-package-format.md  ADR-0008-filesystem-and-update-strategy.md  ADR-0009-browser-boot-emulator.md  ADR-0010-app-sandboxing-model.md  README.md
docs/rfcs/: README.md  RFC-0001-nova-shell.md  RFC-0002-nova-bus.md  RFC-0003-nova-wm.md  RFC-0004-package-service.md  RFC-0005-notification-service.md  RFC-0006-theme-service.md  RFC-0007-settings-service.md  RFC-0008-session-manager.md  RFC-0009-update-service.md
docs/specs/: 00-INDEX.md  01-INTERACTION-FLOWS.md  02-MEMORY-BUDGET.md  03-BOOT-TIMELINE.md  04-WINDOW-MANAGER-SPEC.md  05-NOVA-UI-TOOLKIT-SPEC.md  06-NOVA-SDK-SPEC.md  07-PACKAGE-FORMAT-SPEC.md  08-BROWSER-ARCHITECTURE-SPEC.md  09-APPLICATION-SPECS.md  10-DESIGN-BIBLE.md  11-BUILD-PIPELINE-SPEC.md  12-BROWSER-DEMO-EXPERIENCE.md  13-WEBSITE-INFORMATION-ARCHITECTURE.md  14-ECOSYSTEM-VISION.md  15-NOVA-BUS-PROTOCOL-SPEC.md  16-STATE-MACHINES.md  17-SDK-API-REFERENCE-POLICY.md  18-PLUGIN-ARCHITECTURE-SPEC.md  19-FILESYSTEM-LAYOUT-SPEC.md  20-CONFIGURATION-STRATEGY-SPEC.md  21-OBSERVABILITY-SPEC.md  22-RELEASE-PROCESS-SPEC.md
sdk/: README.md
sdk/nova-app/: Cargo.toml
sdk/nova-app/src/: lib.rs  window.rs
sdk/nova-ui/: Cargo.toml
sdk/nova-ui-wayland/: Cargo.toml
sdk/nova-ui-wayland/src/: canvas.rs  lib.rs
sdk/nova-ui/src/: button.rs  geometry.rs  label.rs  layout.rs  lib.rs  paint.rs  render_backend.rs  widget.rs
services/: README.md
services/nova-bus/: Cargo.toml  build.rs
services/nova-bus-broker/: Cargo.toml
services/nova-bus-broker/src/: broker.rs  lib.rs  server.rs
services/nova-bus-broker/tests/: integration.rs
services/nova-bus/proto/: nova_bus.proto
services/nova-bus/src/: client.rs  error.rs  framing.rs  lib.rs  matching.rs
system/: README.md
tests/: README.md
tests/vertical-slice/: Cargo.toml
tests/vertical-slice/tests/: vertical_slice.rs
tools/: README.md
tools/nova-bus-bench/: Cargo.toml
tools/nova-bus-bench/src/: main.rs
web/: README.md
