[workspace]
resolver = "2"
members = [
    "services/nova-bus",
    "services/nova-bus-broker",
    "sdk/nova-app",
    "sdk/nova-ui",
    "apps/hello",
    "tests/vertical-slice",
    "tools/nova-bus-bench",
    "desktop/compositor",
    "desktop/shell",
    "sdk/nova-ui-wayland",
    "apps/hello-gui",
    "apps/nova-files",
]

# nova-compositor (desktop/compositor) depends on Smithay/wayland-server, which is
# Linux-only (Unix domain sockets, DRM/KMS) — it cannot build on native Windows. It's
# still a workspace member so `cargo build --workspace` from WSL/Linux picks it up, but
# is excluded from the plain `cargo build`/`cargo build --workspace` default set so the
# rest of the workspace keeps building on Windows without an explicit --exclude.
default-members = [
    "services/nova-bus",
    "services/nova-bus-broker",
    "sdk/nova-app",
    "sdk/nova-ui",
    "apps/hello",
    "tests/vertical-slice",
    "tools/nova-bus-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "TBD"
repository = "https://github.com/novaos/novaos"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync", "signal", "process"] }
prost = "0.13"
prost-build = "0.13"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
