[package]
name = "hello"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nova-app = { path = "../../sdk/nova-app" }
nova-ui = { path = "../../sdk/nova-ui" }
nova-bus = { path = "../../services/nova-bus" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "hello"
path = "src/main.rs"
