[package]
name = "nova-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

# Linux/Wayland-only, like nova-compositor — not a workspace default-member
# (see root Cargo.toml).

[dependencies]
nova-ui = { path = "../../sdk/nova-ui" }
nova-ui-wayland = { path = "../../sdk/nova-ui-wayland" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
