[package]
name = "nova-ui-wayland"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nova-ui = { path = "../nova-ui" }
tracing = { workspace = true }
fontdue = "0.9.3"

[dependencies.smithay-client-toolkit]
version = "0.19.2"
default-features = false
features = ["calloop", "xkbcommon"]

[dependencies.wayland-client]
version = "0.31"
