[package]
name = "nova-bus-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nova-bus = { path = "../nova-bus" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "novabusd"
path = "src/bin/novabusd.rs"
