[package]
name = "nova-bus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
